amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-interfaces-object.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-interfaces-object.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-interface-implementations
  Message: Person cannot implement interface 'HasName' more than once
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-interfaces-object.api.graphql#/declares/shape/Person
  Property: http://a.ml/vocabularies/shapes#inherits
  Range: [(14,0)-(16,1)]
  Location: 
